# SQA-Agent

./: .gitignore  LICENSE  README.md  TODO.md  install.sh  pyproject.toml  runtools.sh
.claude/agents/: fix-orphans.md  resolve-file.md  resolve-general.md  review-file-prompt.md  review-file.md  triage-file-guidelines.md  triage-file.md  triage-general.md
.claude/skills/sqa-resolve/: SKILL.md  project.md
.claude/skills/sqa-review/: SKILL.md  project.md
.claude/skills/sqa-status/: SKILL.md
.github/workflows/: ci.yml
.sqa/: config.toml  file_status.json  file_status_bak.json
.sqa/findings/: 3RCDJ.json  BC7GB.json  DBXBS.json  I4UGV.json  LJ3E4.json  LLXBS.json  N2QTH.json  NZ4FU.json  Q6NUS.json
Docs/: design.md  implementation-plan.md
agents/: fix-orphans.md  resolve-file.md  resolve-general.md  review-file-prompts.md  review-file.md  triage-file-guidelines.md  triage-file.md  triage-general.md  triage-guidelines.md
skills/sqa-resolve/: SKILL.md
skills/sqa-review/: SKILL.md
skills/sqa-status/: SKILL.md
src/sqa_tool/: __init__.py  _locked_file.py  anchors.py  cli.py  config.py  file_status.py  findings.py  git_ops.py  paths.py  result_file.py  scope.py
src/sqa_tool/commands/: active_result.py  categories.py  gc.py  init.py  (+10 more)
tests/: conftest.py  test_anchors.py  test_commands.py  test_config.py  test_file_status.py  test_findings.py  test_locked_file.py  test_next_step_hints.py  test_orphans.py  test_orphans_gc.py  test_read_commands.py  test_record_finding.py  test_resolve.py  test_result_file.py  test_session_commands.py  test_triage_resolve.py
