[project]
name = "sqa-tool"
version = "0.1.0"
description = "Deterministic CLI for the SQA review system (companion to the sqa-* Claude Code skills)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Christian Trott" },
]
dependencies = []

[project.scripts]
sqa-tool = "sqa_tool.cli:main"

[project.urls]
Homepage = "https://github.com/christian-trott-yourekatech/Reviewer2"
Repository = "https://github.com/christian-trott-yourekatech/Reviewer2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqa_tool"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "sqa_tool/_bundled/skills"
"agents" = "sqa_tool/_bundled/agents"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyrefly>=0.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
